prometheus-deploy-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deploy-k8s
  namespace: monitoring
  labels:
    app: prometheus-k8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prometheus-k8s
  template:
    metadata:
      labels:
        app: prometheus-k8s
    spec:
      serviceAccountName: prometheus-k8s
      containers:
      - name: prometheus-k8s
        image: prom/prometheus:v2.20.0
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: prom-config
            mountPath: /etc/prometheus
          - name: prom-data
            mountPath: /prometheus
      volumes:
        - name: prom-config
          persistentVolumeClaim:
            claimName: prom-pvc-k8s
        - name: prom-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service-k8s
  namespace: monitoring
  labels:
    app: prometheus-k8s
spec:
  type: ClusterIP
  selector:
    app: prometheus-k8s
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
