prometheus-deploy-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deploy-v2
  namespace: monitoring
  labels:
    app: prometheus
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.12.0
        ports:
          - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service-v2
  namespace: monitoring
  labels:
    app: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
