prometheus-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deploy-v1
  namespace: monitoring
  labels:
    app: prometheus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus-v1
        image: prom/prometheus:v2.20.0
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--storage.tsdb.retention.time=365d"
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: prom-config
            mountPath: /etc/prometheus
          - name: prom-data
            mountPath: /prometheus
      volumes:
        - name: prom-config
          persistentVolumeClaim:
            claimName: prom-pvc
        - name: prom-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service-v1
  namespace: monitoring
  labels:
    app: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
