grafana-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: touchzlab.com
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 3000
